# emar_backup

./: .gitignore
desktop/: .env.sample  .gitignore  Inc-Version.ps1  Inc-VersionUn.ps1  Prepare-DevEnv.ps1  README.md  TODO.md  build.ps1  build_both_msi.ps1  computer_delete.py  config.json  emar.py  heartbeat.py  log_converter.py  pyproject.toml  requirements.txt  server_connect.py  task_and_user.bat  task_and_user.ps1
desktop/app/: __init__.py  consts.py  logger.py
desktop/app/controllers/: __init__.py  computer_delete.py  heartbeat.py  log_convertor.py  server_connect.py  upgrade_program.py
desktop/app/schemas/: __init__.py  activity.py  config.py  config_response.py  download_status_data.py  get_creds_data.py  last_time_response.py  location_info.py  log_converter.py  msi_download_data.py  printer_info.py  registration_with_lid.py  special_status.py
desktop/app/utils/: __init__.py  changes_lookup.py  create_desktop_icon.py  download_file_from_pcc.py  get_credentials.py  get_printer_info_by_posh.py  printer_info_check.py  self_update.py  send_activity.py  send_activity_server_connect.py  send_printer_info.py  sftp_check_files_for_update_and_load.py  version.py
desktop/msi/: .gitignore  BuildInstaller.ps1  BuildInstallers.ps1  BuildUnPromptInstaller.ps1  Common.ps1  Create-DesktopShortcut.ps1  DownloadAndExtractWix.ps1  Get-UserAccount.ps1  Heartbeat.ps1  Inc-Version.ps1  InstallLog.txt  PostInstallActions.ps1  PostInstallUnPromptActions.ps1  Product.wxs  ProductUnPrompt.wxs  TaskAction.ps1  Uninstall-Emar.ps1  UninstallActions.ps1  Upgrade.ps1  build.cmd  config.json  install.cmd  msi.wixproj  posh.cmd  uninstall.cmd  version.txt  wix.sln
desktop/tests/: conftest.py  test_archive.py  test_get_creds.py  test_utils.py
desktop/wix/: BuildInstaller.ps1  DownloadAndExtractWix.ps1  PostInstallActions.ps1  Product.wxs
web/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  a.js  celery_config.py  config.py  deploy.sh  docker-compose.yml  pyproject.toml  sample.env  start_api.sh  start_server.sh  tox.ini  worker.py  wsgi.py
web/app/: __init__.py  database.py  logger.py
web/app/api/: __init__.py  companies.py  company_sftp_data.py  computer.py  downloads_info.py  email.py  load_msi.py  locations_company.py  pcc_api.py  search.py
web/app/controllers/: __init__.py  alert.py  backup_log.py  billing_report.py  clean_log.py  database.py  log_event.py  pagination.py  pcc_api.py  stat_company_location.py  system_log.py  views_permissions.py
web/app/forms/: __init__.py  auth.py  email.py  merge.py  pcc_creation_report.py
web/app/models/: __init__.py  additional_location.py  alert.py  alert_controls.py  alert_email.py  alert_event.py  backup_log.py  client_version.py  company.py  company_settings_link_table.py  computer.py  computer_settings_link_table.py  desktop_client.py  download_backup_call.py  location.py  location_group.py  location_settings_link_table.py  log_event.py  pcc_access_token.py  pcc_activations_scan.py  pcc_creation_report.py  pcc_daily_request.py  system_log.py  telemetry_settings.py  user.py  utils.py
web/app/schema/: __init__.py  active_companies.py  agent_telemetry.py  alert.py  column_search.py  company_sftp_data.py  computer.py  creation_report.py  download_credentials_info.py  download_status.py  email.py  files_checksum.py  get_credentials.py  last_time.py  load_msi.py  location.py  pcc_activation.py  pcc_created_object.py  pcc_facility.py  pcc_report_object.py  pcc_response_paging.py  printer_info.py  search.py  two_legged_auth_result.py  update_msi_version.py
web/app/static/: utilities-animation.html  utilities-border.html  utilities-color.html  utilities-other.html
web/app/templates/: base.html  billing-page.html  company_location_list.html  computer_list.html  custom-edit-computer.html  error.html  import-admin-create-to-dashboard.html  import-admin-edit-to-dashboard.html  import-admin-list-to-dashboard.html  import-company_location-to-dashboard.html  import-computer-to-dashboard.html  import-edit-computer.html  index.html  location-groups-create.html  merge.html  (+2 more)
web/file_api/: .gitignore  .test-scripts.json  Dockerfile  README.md  __init__.py  compose.yaml  index.ts  package.json  run-load-test.sh  test-download-status.sh
web/tests/: conftest.py  test_alert_controller.py  test_api_email_alert.py  test_auth.py  test_clean_old_logs.py  test_company.py  test_company_sftp_data.py  test_computer.py  test_delete_computer.py  test_download_csv.py  test_download_info.py  test_location.py  test_log_event.py  test_msi_download_to_local.py  test_pcc_api.py  test_search.py  test_system_log.py  test_wsgi_commands.py  test_zip_file.py  utils.py
(+182 files in other folders)
