[tool.poetry]
name = "emarweb"
version = "1.0.0"
description = "Emar Web App"
authors = ["petro <xavrais312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.1.0"
Flask-Login = "^0.5.0"
click = "^8.1.0"
email-validator = "^1.1.3"
Flask-WTF = "^1.0.0"
WTForms = "^3.0.1"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.1"
MarkupSafe = "^2.1.1"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.32"
Werkzeug = "2.0.0"
psycopg2-binary = "^2.9.3"
Flask-Migrate = "^3.1.0"
flask-admin = "^1.6.0"
pydantic = "^1.10.4"
flask-openapi3 = "^2.2.2"
loguru = "^0.6.0"
celery = "^5.2.7"
requests = "^2.28.2"
redis = "^4.4.2"
flask-mail = "^0.9.1"
gunicorn = "^20.1.0"
celery-redbeat = "^2.0.0"
flask-jwt-extended = "^4.5.2"
oauthlib = "^3.2.2"
pyopenssl = "^23.1.1"
identity = "^0.2.0"
flask-session = "0.4.1"
xlsxwriter = "^3.1.9"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.1.1"
requests-mock = "^1.10.0"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
